[workspace]
members = ["crates/gpuitunes"]
default-members = ["crates/gpuitunes"]
resolver = "2"

[workspace.dependencies]
gpuitunes = { path = "crates/gpuitunes" }

gpui = { git = "https://github.com/zed-industries/zed" }
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
smallvec = "1.13.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
uuid = { version = "1.11.0", features = ["v4", "serde"]}
