[package]
name = "gpuitunes"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "gpuitunes"
path = "src/gpuitunes.rs"

[dependencies]
gpui.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
strum.workspace = true
uuid.workspace = true
